@@ -44,13 +44,14 @@ import static com.sentrysoftware.matrix.common.helpers.KnownMonitorType.HOST;
 import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.IS_ENDPOINT;
 import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.MAX_THREADS_COUNT;
 import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.MONITOR_ATTRIBUTE_ID;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.OTHER_MONITOR_JOB_TYPES;
 import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.THREAD_TIMEOUT;
 
 @Slf4j
 @NoArgsConstructor
 @EqualsAndHashCode(callSuper = true)
 public class DiscoveryStrategy extends AbstractStrategy {
+
+	private static final String OTHER_MONITOR_JOB_TYPES = "otherMonitorJobTypes";
 
 	public DiscoveryStrategy(
 			@NonNull final TelemetryManager telemetryManager,
@@ -200,7 +201,7 @@ public class DiscoveryStrategy extends AbstractStrategy {
 				.builder()
 				.sources(
 					discovery.getSources(),
-					discovery.getExecutionOrder().stream().toList(),
+					discovery.getExecutionOrder().stream().collect(Collectors.toList()), // NOSONAR
 					discovery.getSourceDep(),
 					jobInfo
 				)
@@ -297,6 +298,7 @@ public class DiscoveryStrategy extends AbstractStrategy {
 				.telemetryManager(telemetryManager)
 				.attributes(noContextAttributeInterpretedValues)
 				.resource(resource)
+				.connectorId(connectorId)
 				.build();
 
 			// Create or update the monitor
@@ -426,18 +428,18 @@ public class DiscoveryStrategy extends AbstractStrategy {
 			.stream()
 			.filter(entry -> detectedConnectorFileNames.contains(entry.getKey()))
 			.map(Map.Entry::getValue)
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		// Get only connectors that define monitors
 		final List<Connector> connectorsWithMonitorJobs = detectedConnectors
 			.stream()
 			.filter(connector -> !connector.getMonitors().isEmpty())
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		// Sort connectors by monitor job type: first put hosts then enclosures. If two connectors have the same type of monitor job, sort them by name
 		final List<Connector> sortedConnectors = connectorsWithMonitorJobs.stream()
 			.sorted(new ConnectorMonitorTypeComparator())
-			.toList();
+			.collect(Collectors.toList()); //NOSONAR
 
 		// Discover each connector
 		sortedConnectors.forEach(connector -> discover(connector, hostname));
