@@ -1,21 +1,19 @@
 package com.sentrysoftware.matrix.strategy.source;
 
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.HTTP_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.HTTP_PERCENT_S_PERCENT_S;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.HTTP_SOURCE_NULL_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_GET_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_GET_PERCENT_S;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_GET_SOURCE_NULL_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_GET_TABLE_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_GET_TABLE_SOURCE_NULL_ERROR_MESSAGE;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_SELECTED_COLUMNS_SPLIT_REGEX;
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SNMP_TABLE_LOG;
+import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.NEW_LINE;
+import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.SEMICOLON;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.sentrysoftware.matrix.common.helpers.StringHelper;
+import com.sentrysoftware.matrix.common.helpers.TextTableHelper;
 import com.sentrysoftware.matrix.configuration.HttpConfiguration;
 import com.sentrysoftware.matrix.configuration.SnmpConfiguration;
 import com.sentrysoftware.matrix.connector.model.monitor.task.source.CopySource;
@@ -55,8 +53,49 @@ public class SourceProcessor implements ISourceProcessor {
 	@WithSpan("Source Copy Exec")
 	@Override
 	public SourceTable process(@SpanAttribute("source.definition") final CopySource copySource) {
-		// TODO Auto-generated method stub
-		return null;
+
+		final String hostname = telemetryManager.getHostConfiguration().getHostname();
+
+		if (copySource == null) {
+			log.error("Hostname {} - CopySource cannot be null, the CopySource operation will return an empty result.",
+				hostname);
+			return SourceTable.empty();
+		}
+
+		final String copyFrom = copySource.getFrom();
+
+		if (copyFrom == null || copyFrom.isEmpty()) {
+			log.error("Hostname {} - CopySource reference cannot be null. Returning an empty table for source {}.", hostname, copySource);
+			return SourceTable.empty();
+		}
+
+		final SourceTable sourceTable = new SourceTable();
+
+		final Optional<SourceTable> maybeOrigin = SourceTable.lookupSourceTable(copyFrom, connectorName, telemetryManager);
+
+		if (maybeOrigin.isEmpty()) {
+			return SourceTable.empty();
+		}
+
+		final SourceTable origin = maybeOrigin.get();
+
+		final List<List<String>> table =
+			origin.getTable()
+			.stream()
+			// Map each row in the table to a new ArrayList, effectively performing a deep copy of each row.
+			.map(ArrayList::new)
+			.filter(row -> !row.isEmpty())
+			.collect(Collectors.toList()); // NOSONAR
+
+		sourceTable.setTable(table);
+
+		if (origin.getRawData() != null) {
+			sourceTable.setRawData(origin.getRawData());
+		}
+
+		logSourceCopy(connectorName, copyFrom, copySource.getKey(), sourceTable, hostname);
+
+		return sourceTable;
 	}
 
 	@WithSpan("Source HTTP Exec")
@@ -65,7 +104,7 @@ public class SourceProcessor implements ISourceProcessor {
 
 		final String hostname = telemetryManager.getHostConfiguration().getHostname();
 		if (httpSource == null) {
-			log.error(HTTP_SOURCE_NULL_ERROR_MESSAGE, hostname);
+			log.error("Hostname {} - HttpSource cannot be null, the HttpSource operation will return an empty result.", hostname);
 			return SourceTable.empty();
 		}
 
@@ -74,7 +113,7 @@ public class SourceProcessor implements ISourceProcessor {
 
 		if (httpConfiguration == null) {
 
-			log.debug(HTTP_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE, hostname, httpSource);
+			log.debug("Hostname {} - The HTTP credentials are not configured. Returning an empty table for HttpSource {}.", hostname, httpSource);
 
 			return SourceTable.empty();
 		}
@@ -103,7 +142,7 @@ public class SourceProcessor implements ISourceProcessor {
 			}
 
 		} catch (Exception e) {
-			logSourceError(connectorName, httpSource.getKey(), String.format(HTTP_PERCENT_S_PERCENT_S, httpSource.getMethod(),
+			logSourceError(connectorName, httpSource.getKey(), String.format("HTTP %s %s", httpSource.getMethod(),
 				httpSource.getUrl()) , hostname, e);
 		}
 
@@ -131,7 +170,7 @@ public class SourceProcessor implements ISourceProcessor {
 		final String hostname = telemetryManager.getHostConfiguration().getHostname();
 
 		if (snmpGetSource == null) {
-			log.error(SNMP_GET_SOURCE_NULL_ERROR_MESSAGE, hostname);
+			log.error("Hostname {} - SNMP Get Source cannot be null, the SNMP Get operation will return an empty result.", hostname);
 			return SourceTable.empty();
 		}
 
@@ -139,7 +178,7 @@ public class SourceProcessor implements ISourceProcessor {
 			.getConfigurations().get(SnmpConfiguration.class);
 
 		if (snmpConfiguration == null) {
-			log.debug(SNMP_GET_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE, hostname, snmpGetSource);
+			log.debug("Hostname {} - The SNMP credentials are not configured. Returning an empty table for SNMP Get Source {}.", hostname, snmpGetSource);
 			return SourceTable.empty();
 		}
 
@@ -155,14 +194,19 @@ public class SourceProcessor implements ISourceProcessor {
 
 				return SourceTable
 					.builder()
-					.table(Stream.of(Stream.of(result).toList()).toList())
+					.table(
+						Stream.of(
+							Stream.of(result).collect(Collectors.toList()) // NOSONAR
+						)
+						.collect(Collectors.toList()) // NOSONAR
+					)
 					.build();
 			}
 
 		} catch (Exception e) { // NOSONAR on interruption
 
 			logSourceError(connectorName,
-				snmpGetSource.getKey(), String.format(SNMP_GET_PERCENT_S, snmpGetSource.getOid()),
+				snmpGetSource.getKey(), String.format("SNMP Get: %s.", snmpGetSource.getOid()),
 				hostname, e);
 		}
 
@@ -176,7 +220,7 @@ public class SourceProcessor implements ISourceProcessor {
 		final String hostname = telemetryManager.getHostConfiguration().getHostname();
 
 		if (snmpTableSource == null) {
-			log.error(SNMP_GET_TABLE_SOURCE_NULL_ERROR_MESSAGE, hostname);
+			log.error("Hostname {} - SNMP Get Table Source cannot be null, the SNMP Get Table operation will return an empty result.", hostname);
 			return SourceTable.empty();
 		}
 
@@ -190,7 +234,7 @@ public class SourceProcessor implements ISourceProcessor {
 		}
 
 		// The selectedColumns String is like "column1, column2, column3" and we want to split it into ["column1", "column2", "column3"]
-		final String[] selectedColumnArray = selectedColumns.split(SNMP_SELECTED_COLUMNS_SPLIT_REGEX);
+		final String[] selectedColumnArray = selectedColumns.split("\\s*,\\s*");
 
 		final SnmpConfiguration protocol = (SnmpConfiguration) telemetryManager
 			.getHostConfiguration()
@@ -198,7 +242,10 @@ public class SourceProcessor implements ISourceProcessor {
 			.get(SnmpConfiguration.class);
 
 		if (protocol == null) {
-			log.debug(SNMP_GET_TABLE_CREDENTIALS_NOT_CONFIGURED_ERROR_MESSAGE, hostname, snmpTableSource);
+			log.debug("Hostname {} - The SNMP credentials are not configured. Returning an empty table for SNMP Get Table Source {}.",
+				hostname,
+				snmpTableSource
+			);
 			return SourceTable.empty();
 		}
 
@@ -222,7 +269,7 @@ public class SourceProcessor implements ISourceProcessor {
 			logSourceError(
 				connectorName,
 				snmpTableSource.getKey(),
-				String.format(SNMP_TABLE_LOG, snmpTableSource.getOid()),
+				String.format("SNMP Table: %s", snmpTableSource.getOid()),
 				hostname,
 				e
 			);
@@ -234,22 +281,185 @@ public class SourceProcessor implements ISourceProcessor {
 	@WithSpan("Source Static Exec")
 	@Override
 	public SourceTable process(@SpanAttribute("source.definition") final StaticSource staticSource) {
-		// TODO Auto-generated method stub
-		return null;
+
+		final String hostname = telemetryManager.getHostConfiguration().getHostname();
+
+		if (staticSource == null) {
+			log.error("Hostname {} - Static Source cannot be null, the StaticSource operation will return an empty result.", hostname);
+			return SourceTable.empty();
+		}
+
+		final String staticValue = staticSource.getValue();
+
+		if (staticValue == null || staticValue.isEmpty()) {
+			log.error("Hostname {} - Static Source reference cannot be null. Returning an empty table for source {}.", hostname, staticSource);
+			return SourceTable.empty();
+		}
+
+		log.debug("Hostname {} - Got Static Source value [{}] referenced in source [{}].",
+			hostname,
+			staticValue,
+			staticSource.getKey());
+
+		final SourceTable sourceTable = new SourceTable();
+
+		final Optional<SourceTable> maybeStaticTable = SourceTable.lookupSourceTable(staticValue, connectorName, telemetryManager);
+
+		if (maybeStaticTable.isEmpty()) {
+			return SourceTable.empty();
+		}
+
+		// Note: In case of the static source getSourceTable never returns null
+		final List<List<String>> table = maybeStaticTable.get()
+			.getTable()
+			.stream()
+			// Map each row in the table to a new ArrayList, effectively performing a deep copy of each row.
+			.map(ArrayList::new)
+			.filter(row -> !row.isEmpty())
+			.collect(Collectors.toList());
+
+		sourceTable.setTable(table);
+		sourceTable.setRawData(SourceTable.tableToCsv(sourceTable.getTable(), SEMICOLON, false));
+
+		return sourceTable;
 	}
 
 	@WithSpan("Source TableJoin Exec")
 	@Override
 	public SourceTable process(@SpanAttribute("source.definition") final TableJoinSource tableJoinSource) {
-		// TODO Auto-generated method stub
-		return null;
+
+		final String hostname = telemetryManager.getHostConfiguration().getHostname();
+
+		if (tableJoinSource == null) {
+			log.error("Hostname {} - Table Join Source cannot be null, the Table Join will return an empty result.", hostname);
+			return SourceTable.empty();
+		}
+
+		if (tableJoinSource.getLeftTable() == null) {
+			log.debug("Hostname {} - Left table cannot be null, the Join {} will return an empty result.", hostname, tableJoinSource);
+			return SourceTable.empty();
+		}
+
+		final Optional<SourceTable> maybeLeftTable = SourceTable.lookupSourceTable(tableJoinSource.getLeftTable(), connectorName, telemetryManager);
+		if (maybeLeftTable.isEmpty()) {
+			log.debug("Hostname {} - Reference to Left table cannot be found, the Join {} will return an empty result.", hostname, tableJoinSource);
+			return SourceTable.empty();
+		}
+
+		if (tableJoinSource.getRightTable() == null) {
+			log.debug("Hostname {} - Right table cannot be null, the Join {} will return an empty result.", hostname, tableJoinSource);
+			return SourceTable.empty();
+		}
+
+		final Optional<SourceTable> maybeRightTable = SourceTable.lookupSourceTable(tableJoinSource.getRightTable(), connectorName, telemetryManager);
+		if (maybeRightTable.isEmpty()) {
+			log.debug("Hostname {} - Reference to Right table cannot be found, the Join {} will return an empty result.", hostname, tableJoinSource);
+			return SourceTable.empty();
+		}
+
+		if (tableJoinSource.getLeftKeyColumn() < 1 || tableJoinSource.getRightKeyColumn() < 1) {
+			log.error("Hostname {} - Invalid key column number (leftKeyColumnNumber={}, rightKeyColumnNumber={}).",
+				tableJoinSource.getLeftKeyColumn(),
+				tableJoinSource.getDefaultRightLine(),
+				hostname);
+			return SourceTable.empty();
+		}
+
+		final SourceTable leftTable = maybeLeftTable.get();
+		final SourceTable rightTable = maybeRightTable.get();;
+
+		logTableJoin(tableJoinSource.getKey(), tableJoinSource.getLeftTable(), tableJoinSource.getRightTable(),
+			leftTable, rightTable, hostname);
+
+		String defaultRightLine = tableJoinSource.getDefaultRightLine();
+
+		final List<List<String>> executeTableJoin = matsyaClientsExecutor.executeTableJoin(
+			leftTable.getTable(),
+			rightTable.getTable(),
+			tableJoinSource.getLeftKeyColumn(),
+			tableJoinSource.getRightKeyColumn(),
+			defaultRightLine != null ? Arrays.asList(defaultRightLine.split(";")) : null,
+				"wbem".equalsIgnoreCase(tableJoinSource.getKeyType()),
+				true);
+
+		SourceTable sourceTable = new SourceTable();
+		if (executeTableJoin != null) {
+			sourceTable.setTable(executeTableJoin);
+		}
+
+		return sourceTable;
+	}
+
+	/**
+	 * Log the table join left and right tables
+	 *
+	 * @param sourceKey      the table join source key
+	 * @param leftSourceKey  the source key referencing the left source
+	 * @param rightSourceKey the source key referencing the right source
+	 * @param leftTable      the left table
+	 * @param rightTable     the right table
+	 */
+	private static void logTableJoin(final String sourceKey, final String leftSourceKey, final String rightSourceKey,
+			final SourceTable leftTable, final SourceTable rightTable, final String hostname) {
+
+		if (!log.isDebugEnabled()) {
+			return;
+		}
+
+		log.debug("Hostname {} - Table Join Source [{}]:\nLeft table [{}]:\n{}\nRight table [{}]:\n{}\n",
+			hostname,
+			sourceKey,
+			leftSourceKey,
+			TextTableHelper.generateTextTable(leftTable.getHeaders(), leftTable.getTable()),
+			rightSourceKey,
+			TextTableHelper.generateTextTable(rightTable.getHeaders(), rightTable.getTable()));
+
 	}
 
 	@WithSpan("Source TableUnion Exec")
 	@Override
 	public SourceTable process(@SpanAttribute("source.definition") final TableUnionSource tableUnionSource) {
-		// TODO Auto-generated method stub
-		return null;
+
+		final String hostname = telemetryManager.getHostConfiguration().getHostname();
+
+		if (tableUnionSource == null) {
+			log.warn("Hostname {} - Table Union Source cannot be null, the Table Union operation will return an empty result.", hostname);
+			return SourceTable.empty();
+		}
+
+		final List<String> unionTables = tableUnionSource.getTables();
+		if (unionTables == null) {
+			log.debug("Hostname {} - Table list in the Union cannot be null, the Union operation {} will return an empty result.",
+				hostname, tableUnionSource);
+			return SourceTable.empty();
+		}
+
+		final List<SourceTable> sourceTablesToConcat = unionTables
+			.stream()
+			.map(key -> SourceTable.lookupSourceTable(key, connectorName, telemetryManager))
+			.filter(Optional::isPresent)
+			.map(Optional::get)
+			.collect(Collectors.toList()); //NOSONAR
+
+		final SourceTable sourceTable = new SourceTable();
+		final List<List<String>> executeTableUnion = sourceTablesToConcat
+			.stream()
+			.map(SourceTable::getTable)
+			.flatMap(Collection::stream)
+			.collect(Collectors.toList()); //NOSONAR
+
+		sourceTable.setTable(executeTableUnion);
+
+		String rawData = sourceTablesToConcat
+			.stream()
+			.map(SourceTable::getRawData)
+			.filter(Objects::nonNull)
+			.collect(Collectors.joining(NEW_LINE))
+			.replace("\n\n", NEW_LINE);
+
+		sourceTable.setRawData(rawData);
+
+		return sourceTable;
 	}
 
 	@WithSpan("Source WBEM HTTP Exec")
@@ -293,5 +503,55 @@ public class SourceProcessor implements ISourceProcessor {
 				"Hostname %s - Source [%s] was unsuccessful due to an exception. Context [%s]. Connector: [%s]. Returning an empty table. Stack trace:",
 				hostname, sourceKey, context, connectorName), throwable);
 		}
+	}
+
+	/**
+	 * Log the source copy data
+	 *
+	 * @param connectorName   the name of the connector defining the source
+	 * @param parentSourceKey the parent source key referenced in the source copy
+	 * @param childSourceKey  the source key referencing the parent source
+	 * @param sourceTable     the source's result we wish to log
+	 * @param hostname        the host's name
+	 */
+	private static void logSourceCopy(
+		final String connectorName,
+		final String parentSourceKey,
+		final String childSourceKey,
+		final SourceTable sourceTable,
+		final String hostname) {
+
+		if (!log.isDebugEnabled()) {
+			return;
+		}
+
+		// Is there any raw data to log?
+		if (sourceTable.getRawData() != null && (sourceTable.getTable() == null || sourceTable.getTable().isEmpty())) {
+			log.debug("Hostname {} - Got Source [{}] referenced in Source [{}]. Connector: [{}].\nRaw result:\n{}\n",
+				hostname,
+				parentSourceKey,
+				childSourceKey,
+				connectorName,
+				sourceTable.getRawData());
+			return;
+		}
+
+		if (sourceTable.getRawData() == null) {
+			log.debug("Hostname {} - Got Source [{}] referenced in Source [{}]. Connector: [{}].\nTable result:\n{}\n",
+				hostname,
+				parentSourceKey,
+				childSourceKey,
+				connectorName,
+				TextTableHelper.generateTextTable(sourceTable.getHeaders(), sourceTable.getTable()));
+			return;
+		}
+
+		log.debug("Hostname {} - Got Source [{}] referenced in Source [{}]. Connector: [{}].\nRaw result:\n{}\nTable result:\n{}\n",
+			hostname,
+			parentSourceKey,
+			childSourceKey,
+			connectorName,
+			sourceTable.getRawData(),
+			TextTableHelper.generateTextTable(sourceTable.getHeaders(), sourceTable.getTable()));
 	}
 }
